fix: line wrapping

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -44,3 +44,7 @@ body {
     @apply text-ctp-blue transition-all;
   }
 }
+
+::-webkit-scrollbar {
+  display: none;
+}
